# vivicy

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  LICENSE  NIGHT-SUMMARY-v0.5.0.md  PIPELINE-EVOLUTION.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
app/: globals.css  layout.tsx  page.test.tsx  page.tsx
e2e/: browser-issues.ts  cli-modal-screenshot.spec.ts  control.spec.ts  doc-prep-stage.spec.ts  empty-state.spec.ts  global-setup.ts  global-teardown.ts  helpers.ts  layout-edit.spec.ts  onboarding.spec.ts  overflow.spec.ts  settings.spec.ts  setup.spec.ts  sidebar-legend-minimap.spec.ts  smoke.spec.ts  xbrowser-screenshots.spec.ts
factory/: agent-spawn.mjs  agent-spawn.ts  atomic-write.mjs  atomic-write.test.mjs  atomic-write.test.ts  atomic-write.ts  change-control.mjs  change-control.test.mjs  change-control.test.ts  change-control.ts  cli.mjs  cli.test.mjs  cli.test.ts  cli.ts  cr-apply.mjs  cr-apply.test.mjs  cr-apply.test.ts  cr-apply.ts  detect-language.test.ts  detect-language.ts  dev-loop-supervised.mjs  dev-loop-supervised.ts  dev-loop.mjs  dev-loop.test.mjs  dev-loop.test.ts  dev-loop.ts  dev-preflight.mjs  dev-preflight.ts  dev-rehearsal.mjs  dev-rehearsal.ts  dev-status.mjs  dev-status.ts  doc-baseline.mjs  (+85 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: prepare-sidecar.mjs
src-tauri/sidecar/: launch-server.mjs
src-tauri/src/: lib.rs  main.rs
(+392 files in other folders)
