[package]
name = "vivicy"
version = "0.1.0"
description = "Vivicy — a visual autonomous dev factory (desktop shell)"
authors = ["Tomy Spagnoletti Duval"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# The Rust crate is a binary (the desktop shell) plus a lib so `tauri build` and
# mobile targets share the same `run()` entrypoint.
[lib]
name = "vivicy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
# Pick a free localhost port for the Next sidecar at startup.
portpicker = "0.1"
# Wait for the sidecar HTTP server to come up before showing the window.
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
